fix: tables updated and create a new migration
